# hometrainer

./: AboutPage.qml  CMakeLists.txt  ExercisesPage.qml  HomePage.qml  README.md  ReportsPage.qml  SettingsPage.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
include/: database.cpp  database.h  exercise.cpp  exercise.h  exercises_connector.cpp  exercises_connector.h  home_connector.cpp  home_connector.h  report.cpp  report.h  reports_connector.cpp  reports_connector.h  session.cpp  session.h  setting.cpp  setting.h  settings_connector.cpp  settings_connector.h
